tests/fixtures/service-mesh-sample-repo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: reviews-rollout
  namespace: default
spec:
  replicas: 3
  strategy:
    canary:
      maxSurge: "25%"
      maxUnavailable: 0
      steps:
        - setWeight: 20
        - pause:
            duration: 60s
        - setWeight: 50
        - pause:
            duration: 120s
        - setWeight: 80
        - pause: {}
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
        - name: reviews
          image: reviews:v2
